# DARC

./: .gitignore  README.md  pyproject.toml
darc/: data.py  evaluate.py  export_results.py  generate.py  io.py  math_utils.py  modelscope_utils.py  perturb.py  reward.py  select.py  templates.py  textgen.py  tune.py
recipes/: llama31_8b_mtbench_darc_eps.sh  qwen25_7b_mtbench_darc_eps.sh
